# cpi-examples

./: .gitignore  Anchor.toml  README.md
.github/workflows/: ci-pr-main.yml
idls/: dlmm.json  dynamic_amm.json  dynamic_vault.json  m3m3.json
programs/cpi-example/: Cargo.toml  test.sh
programs/cpi-example/src/: lib.rs
programs/cpi-example/src/instructions/: dynamic_amm_swap.rs  mod.rs
programs/cpi-example/src/instructions/dlmm_cpi/: mod.rs  swap.rs
programs/cpi-example/src/instructions/dynamic_amm_cpi/: claim_fee.rs  initialize_customizable_permissionless_pool.rs  initialize_permissionless_pool_with_config.rs  lock_liquidity.rs  mod.rs  swap.rs
programs/cpi-example/src/instructions/m3m3_cpi/: initialize_vault.rs  mod.rs
programs/cpi-example/tests/: dlmm_swap.rs  dump_fixtures.sh  dynamic_amm_claim_fee.rs  dynamic_amm_init_pool.rs  dynamic_amm_lock_liquidity.rs  dynamic_amm_swap.rs  dynamic_dlmm_swap.rs  m3m3_initialize_vault.rs
programs/cpi-example/tests/helpers/: dlmm_utils.rs  dynamic_amm_utils.rs  m3m3_utils.rs  mod.rs
programs/cpi-example/tests/integration/: dlmm_swap.rs  dump_fixtures.sh  dynamic_amm_claim_fee.rs  dynamic_amm_init_pool.rs  dynamic_amm_lock_liquidity.rs  dynamic_amm_swap.rs  m3m3_initialize_vault.rs  main.rs
programs/cpi-example/tests/integration/helpers/: dlmm_pda.rs  dlmm_utils.rs  dynamic_amm_aux_lp_mint.rs  dynamic_amm_ix_account_builder.rs  dynamic_amm_pda.rs  dynamic_amm_utils.rs  dynamic_vault_aux_lp_mint.rs  dynamic_vault_pda.rs  m3m3_pda.rs  mod.rs  utils.rs
