[package]
name = "cpi-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.28.0"
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
dlmm = { git = "https://github.com/MeteoraAg/dlmm-sdk/", package = "lb_clmm", rev = "c0be81cd9983ace2bc1b9fd15319e42a09561b78", features = [
    "cpi",
] }
dynamic-amm = { git = "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk", features = [
    "cpi",
], rev = "ae46f2a44edbd8231467effd530c1eeecc231a1b" }
m3m3 = { git = "https://github.com/meteoraAg/stake-for-fee-sdk", package = "stake_for_fee_interface", rev = "796ed09b500a92c36927915d22cce28ef78b2a8d" }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
dynamic-vault = { git = "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk", features = [
    "cpi",
], rev = "ae46f2a44edbd8231467effd530c1eeecc231a1b" }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
assert_matches = "1.5.0"
solana-client = "1.16.0"
solana-account-decoder = "1.16.0"
bincode = "1.3.3"
spl-associated-token-account = "2.2.0"
