[package]
name = "cpi-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = "0.28.0"
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
dlmm = { git = "https://github.com/MeteoraAg/dlmm-sdk/", package = "lb_clmm", rev = "c0be81cd9983ace2bc1b9fd15319e42a09561b78", features = [
    "cpi",
] }
dynamic-amm = { git = "https://github.com/MeteoraAG/dynamic-amm-sdk", features = [
    "cpi",
], rev = "997df950fbd6fa64e1228f38acb4419adeed0b55", package = "dynamic-amm" }
dynamic-amm-common = { git = "https://github.com/MeteoraAG/dynamic-amm-sdk", rev = "997df950fbd6fa64e1228f38acb4419adeed0b55", package = "common" }
m3m3 = { git = "https://github.com/meteoraAg/stake-for-fee-sdk", package = "stake_for_fee_interface", rev = "60b1d2e8e3629e1c99377843fb377665247e82b1" }
m3m3-common = { git = "https://github.com/meteoraAg/stake-for-fee-sdk", rev = "60b1d2e8e3629e1c99377843fb377665247e82b1", package = "common" }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
dynamic-vault = { git = "https://github.com/MeteoraAG/dynamic-amm-sdk", features = [
    "cpi",
], rev = "997df950fbd6fa64e1228f38acb4419adeed0b55" }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
assert_matches = "1.5.0"
solana-client = "1.16.0"
solana-account-decoder = "1.16.0"
bincode = "1.3.3"
spl-associated-token-account = "2.2.0"
